<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wardrobe">

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#91A892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ConstraintLayout containing profile icons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center">

            <!-- Male Icon -->
            <ImageView
                android:id="@+id/male_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Male Icon"
                android:src="@drawable/ic_male"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Default Icon -->

            <!-- Female Icon -->

            <ImageView
                android:id="@+id/default_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:contentDescription="Default Profile Icon"
                android:src="@drawable/ic_defaultprofile"
                android:visibility="visible"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="6dp" />

            <ImageView
                android:id="@+id/female_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Female Icon"
                android:src="@drawable/ic_female"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Yapp Icon -->
        <ImageView
            android:id="@+id/yapp_icon"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="165dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_yapp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomPanel"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:background="#91A892"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/container_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:clickable="true"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/home_desc"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/home_text"
                android:textColor="@android:color/black"

                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_wardrobe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_toEndOf="@id/container_home"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_wardrobe"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@string/wardrobe_desc"
                android:src="@drawable/ic_wardrobe" />

            <TextView
                android:id="@+id/text_wardrobe"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/wardrobe_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_toEndOf="@id/container_wardrobe"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_work"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/work_desc"
                android:src="@drawable/ic_work" />

            <TextView
                android:id="@+id/text_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/work_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_toEndOf="@id/container_work"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_style"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/style_desc"
                android:src="@drawable/ic_style" />

            <TextView
                android:id="@+id/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/tinos_reg"
                android:text="@string/style_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel">

        <Button
            android:id="@+id/btnallapparels"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/apparel_selector"
            android:fontFamily="@font/tinos_reg"

            android:text="All"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnupperapparels"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/apparel_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Upper"
            app:layout_constraintStart_toEndOf="@+id/btnallapparels"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnlowerapparels"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/apparel_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Lower"
            app:layout_constraintStart_toEndOf="@+id/btnupperapparels"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnothers"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/apparel_selector"
            android:fontFamily="@font/tinos_reg"
            android:text="Others"
            app:layout_constraintStart_toEndOf="@+id/btnlowerapparels"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtvirtualwardrobe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/tinos_reg"

        android:text="My Wardrobe"
        android:textColor="#171E49"
        android:textSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanel" />

</androidx.constraintlayout.widget.ConstraintLayout>